--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
 
+
+  cupertino_icons: ^0.1.2
+  geolocator: ^6.1.1
+  http: ^0.12.0+2
+  flutter_spinkit: ^4.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 flutter:
   uses-material-design: true
